...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/card1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:scaleType="centerCrop"
                android:background="@color/white"
                android:padding="0dp"/>
            <ImageButton
                android:id="@+id/card2"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
            <ImageButton
                android:id="@+id/card3"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
...
        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/card4"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
            <ImageButton
                android:id="@+id/card5"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
            <ImageButton
                android:id="@+id/card6"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
...
        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/card7"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
            <ImageButton
                android:id="@+id/card8"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
            <ImageButton
                android:id="@+id/card9"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_card_foreground"
                android:background="@color/white"
                android:scaleType="centerCrop" />
...
